Pacifista+ V1 impl